[backend]: added filtered search to api consumer api
