# api/internal/docs/swagger.json
@@ -241,6 +241,70 @@
                 "responses": {}
             }
         },
+        "/search/consumers/filters": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "search consumers"
+                ],
+                "summary": "получение списка всех фильтров для поиска по объектам",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/models.Filter"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/search/consumers/q": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "search consumers"
+                ],
+                "summary": "поиск по объектам consumers с учетом фильтров",
+                "parameters": [
+                    {
+                        "description": "фильтры для поиска",
+                        "name": "filters",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Filter"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.HeatingPointDTO"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/search/objects": {
             "get": {
                 "produces": [
@@ -363,6 +427,44 @@
                     "type": "string"
                 },
                 "source": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Filter": {
+            "type": "object",
+            "properties": {
+                "filterName": {
+                    "type": "string"
+                },
+                "values": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "models.HeatingPointDTO": {
+            "type": "object",
+            "properties": {
+                "balanceHolder": {
+                    "type": "string"
+                },
+                "commissioningDate": {},
+                "consumerAddress": {
+                    "type": "string"
+                },
+                "district": {
+                    "type": "string"
+                },
+                "locationType": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
