# api/internal/search/models/search_filter.go
@@ -1,7 +1,0 @@
-package models
-
-// Filter фильтр для поиска по объектам.
-type Filter struct {
-	Name   string   `json:"filterName"`
-	Values []string `json:"values"`
-}
